added the navbar and made responsive for small device

--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teach-Wave</title>
+    <link rel="stylesheet" href="styles/Teach_wave.css">
+    <!-- font awsome cdn -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
-    
+    <!-- header section start -->
+    <header>
+        <!-- nav_bar -->
+        <nav class="nav_bar">
+         <div>
+             <h1><span class="teach">Teach</span><span class="wave">Wave</span></h1>
+         </div>
+         <ul class="list-items">
+              <li class="item">About</li>
+              <li class="item">Episodes</li>
+              <li class="item">Host</li>
+         </ul>
+         <div>
+             <button class="btn-primary" class="gaibulhawa">
+                  Subscribe <i class="fa-solid fa-arrow-right"></i>
+             </button>
+             <img class="threedot_img" src="assets/hamburger-menu.png" alt="">
+         </div>
+         </nav>
+         
+    </header>
 </body>
 </html>
