added the hero section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,29 @@
              <img class="threedot_img" src="assets/hamburger-menu.png" alt="">
          </div>
          </nav>
-         
+         <!-- hero section -->
+        <div class="banner-container">
+               <div class="banner-card-container">
+                      <div class="banner-card-fristpart">
+                        <img class="banner-circle-img" src="assets/hero-circle.png" alt="hero-circle">
+                        <div class="new-text">
+                             <p>NEW</p>
+                        </div>
+                        <div class="banner-card-fristchild"> 
+                             <img class="banner-microphone-img" src="assets/microphone.png" alt="">
+                        </div>
+                      </div>
+                      <div class="banner-card-secondpart">
+                              <h1 class="banner-title">TechWave</h1>
+                              <p class="banner-sub-title">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                              <div class="btn-container">
+                                 <button class=" listen-btn"> <img src="assets/spotify.png" alt="">Listen on Spotify</button>
+                                 <button class="Subscribe-btn"> <img src="assets/message.png" alt="">Subscribe</button>
+
+                              </div>
+                      </div>
+               </div>
+        </div>
     </header>
 </body>
 </html>
